# processor-unzip

./: .gitignore  .travis.yml  Dockerfile  README.md  bitbucket-pipelines.yml  flake8.cfg  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configuration_description.md
src/: component.py  configuration.py  decompressor.py
src/decompress/: __init__.py  decompress.py
src/modules/: utils.py
tests/: test_component.py  test_functional.py
tests/decompress/compression-type-gzip/source/data/: config.json
tests/decompress/compression-type-gzip/source/data/in/files/: sample1
tests/decompress/compression-type-snappy/source/data/: config.json
tests/decompress/compression-type-zip/source/data/: config.json
tests/decompress/compression-type-zip/source/data/in/files/: sample
tests/decompress/invalid-file-graceful/source/data/: config.json
tests/decompress/snappy-subfolders/source/data/: config.json
tests/decompress/zlib-simple/source/data/: config.json
tests/decompress/zlib-window_size/source/data/: config.json
tests/foldered/basic/source/data/: config.json
tests/functional/basic/source/data/: config.json
tests/functional/foldered/source/data/: config.json
tests/functional/to_folder_false/source/data/: config.json
tests/functional/to_folder_true/source/data/: config.json
tests/functional/zlib-invalid-window_size/source/data/: config.json
tests/functional/zlib-simple/source/data/: config.json
tests/functional/zlib-window_size/source/data/: config.json
(+14 files in other folders)
