[project]
name = "processor-unzip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datadirtest",
    "freezegun>=1.5.2",
    "keboola-component>=1.6.10",
    "mock>=5.2.0",
    "py7zr>=1.0.0",
    "pydantic>=2.11.7",
]

[tool.uv.sources]
datadirtest = { url = "https://bitbucket.org/kds_consulting_team/datadirtest/get/1.8.7.zip" }

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
